# Cognify

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
config/: llm.yaml  settings.toml
scripts/: download-model.sh  init-ollama-container.sh  init-ollama.sh
src/: config.rs  constants.rs  lib.rs  main.rs  models.rs  utils.rs  watcher.rs
src/embeddings/: local.rs  mod.rs  multi_ollama.rs  tei.rs  trait.rs
src/extractor/: mod.rs  pdf.rs  trait.rs
src/file/: factory.rs  mod.rs  trait.rs
src/file/types/: csv.rs  generic.rs  json.rs  md.rs  mod.rs  pdf.rs  semantic.rs  txt.rs  zip.rs
src/indexer/: meili.rs  mod.rs  trait.rs
src/llm/: local.rs  mod.rs  trait.rs
src/organizer/: cluster.rs  context.rs  generator.rs  mod.rs  mover.rs  preview.rs
src/tagger/: generic.rs  mod.rs  registry.rs  trait.rs
src/tagger/document/: mod.rs  pdf.rs
src/tagger/text/: md.rs  mod.rs  txt.rs
